--- a/backend/language-learning/.gitignore
+++ b/backend/language-learning/.gitignore
@@ -31,3 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+###Spring Boot###
+/src/main/resources/application.properties
+*.properties
+application.properties
