--- a/backend/language-learning/pom.xml
+++ b/backend/language-learning/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		<!-- needed dependency if on Java 9 or newer -->
+		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
